CHANGES

Trunk
	Added whether libxml2 enabled to version.

	Form feeds are now stored using a new empty XML element.

	Default xml encoding for srcml2src unit extraction is that of the root unit.

	Allow for libxml and non-libxml builds of src2srcml.  Currently, srcml2src is only available with a
	libxml build.

	Get default text encoding from locale.

	Handle non-existing input files correctly.

	Allow for combined short options in src2srcml.

	Fixed then after condition problem with while nested in if.

	Add option to srcml2src to get encoding.

	Remove append handling.  New options make it unnecessary.

	New attribute, version.

	Validate encodings in src2srcml before further processing.

	Added ability to use embedded values in parameters.

	Added verbose flag (changing version flag).

	Changed srcml2src to use libxml2.

	Improve command line options for srcml2src and make the handling more consistent between the programs.

	Changed src2srcml to use libxml2.

	Converted boolean parameters to one option parameter.

	Added gzip compression option to output of src2srcml.

	Move output options out of srcMLOutput.

	Move selection of options to main program.

	Cleanup of file handling in src2srcml program.

	Changed standalone attribute in xml declaration to "yes".

	Added command line options to process multiple input files.

Aug-29-2005-Beta

	Output of XML declaration.  This allows for proper encoding
	type to be given and clears up some problems with special

	Fix markup of throws in Java.

	Marks as error list of more than one input file in both src2srcml and srcml2src.  Prevents overwriting
	of second parameter.

	Remove use of wstring in srcml2src.  Doesn't work in Visual Studio builds.  In addition,
	it is not used in src2srcml.

	Make builds easier in Visual Studio.

	Fix regression problem with character '#' used in text.

	Eliminate empty expression element in empty expression block.

	Fix use of calls in expressions in throw lists.
